--- a/css/theme_extra.css
+++ b/css/theme_extra.css
@@ -21,11 +21,11 @@
  * https://github.com/mkdocs/mkdocs/issues/233
  */
 .rst-content pre code {
-  white-space: pre;
-  word-wrap: normal;
-  display: block;
-  padding: 12px;
-  font-size: 12px;
+    white-space: pre;
+    word-wrap: normal;
+    display: block;
+    padding: 12px;
+    font-size: 12px;
 }
 
 /*
@@ -36,9 +36,11 @@
 a code {
     color: #2980B9;
 }
+
 a:hover code {
     color: #3091d1;
 }
+
 a:visited code {
     color: #9B59B6;
 }
@@ -50,7 +52,8 @@ a:visited code {
  *
  * https://github.com/mkdocs/mkdocs/issues/411
  */
-pre .cs, pre .c {
+pre .cs,
+pre .c {
     font-weight: inherit;
     font-style: inherit;
 }
@@ -63,9 +66,9 @@ pre .cs, pre .c {
  * https://github.com/mkdocs/mkdocs/issues/319
  */
 .rst-content .no-highlight {
-  display: block;
-  padding: 0.5em;
-  color: #333;
+    display: block;
+    padding: 0.5em;
+    color: #333;
 }
 
 
@@ -89,7 +92,8 @@ pre .cs, pre .c {
 form .search-query {
     width: 100%;
     border-radius: 50px;
-    padding: 6px 12px;  /* csslint allow: box-model */
+    padding: 6px 12px;
+    /* csslint allow: box-model */
     border-color: #D1D4D5;
 }
 
@@ -98,12 +102,12 @@ form .search-query {
  *
  * https://github.com/mkdocs/mkdocs/issues/656
  */
- .rst-content .admonition code {
-  color: #404040;
-  border: 1px solid #c7c9cb;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  background: #f8fbfd;
-  background: rgba(255, 255, 255, 0.7);
+.rst-content .admonition code {
+    color: #404040;
+    border: 1px solid #c7c9cb;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background: #f8fbfd;
+    background: rgba(255, 255, 255, 0.7);
 }
 
 /*
@@ -120,7 +124,13 @@ form .search-query {
     border: none;
 }
 
-td, th {
-   border: 1px solid #e1e4e5 !important; /* csslint allow: important */
-   border-collapse: collapse;
+td,
+th {
+    border: 1px solid #e1e4e5 !important;
+    /* csslint allow: important */
+    border-collapse: collapse;
+}
+
+p {
+    text-align: justify;
 }
