--- a/css/theme_extra.css
+++ b/css/theme_extra.css
@@ -6,10 +6,40 @@
  * https://github.com/mkdocs/mkdocs/issues/233
  * https://github.com/mkdocs/mkdocs/issues/834
  */
+.rst-content pre {
+	position: relative;
+}
+
+.rst-content pre .copy {
+	background-color: #333;
+	color: #eee;
+	font: .7rem "Lato";
+	padding: .3rem .8rem;
+	border-radius: 3px;
+	position: absolute;
+	top: -1.7rem;
+	right: 0;
+	display: none;
+}
+
+.rst-content pre .fa-clone {
+	position: absolute;
+	top: .4rem;
+	right: .4rem;
+	transform: rotate(180deg);
+	opacity: .6;
+	cursor: pointer;
+	font-size: .8rem;
+}
+
+.rst-content pre .fa-clone:hover {
+	opacity: 1;
+}
+
 .rst-content code {
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    padding: 2px 5px;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	padding: 2px 5px;
 }
 
 /**
@@ -21,11 +51,11 @@
  * https://github.com/mkdocs/mkdocs/issues/233
  */
 .rst-content pre code {
-    white-space: pre;
-    word-wrap: normal;
-    display: block;
-    padding: 12px;
-    font-size: 12px;
+	white-space: pre;
+	word-wrap: normal;
+	display: block;
+	padding: 12px;
+	font-size: 12px;
 }
 
 /*
@@ -34,15 +64,15 @@
  * https://github.com/mkdocs/mkdocs/issues/718
  */
 a code {
-    color: #2980B9;
+	color: #2980B9;
 }
 
 a:hover code {
-    color: #3091d1;
+	color: #3091d1;
 }
 
 a:visited code {
-    color: #9B59B6;
+	color: #9B59B6;
 }
 
 /*
@@ -54,8 +84,8 @@ a:visited code {
  */
 pre .cs,
 pre .c {
-    font-weight: inherit;
-    font-style: inherit;
+	font-weight: inherit;
+	font-style: inherit;
 }
 
 /*
@@ -66,9 +96,9 @@ pre .c {
  * https://github.com/mkdocs/mkdocs/issues/319
  */
 .rst-content .no-highlight {
-    display: block;
-    padding: 0.5em;
-    color: #333;
+	display: block;
+	padding: 0.5em;
+	color: #333;
 }
 
 
@@ -77,24 +107,24 @@ pre .c {
  */
 
 .search-results {
-    margin-top: 23px;
+	margin-top: 23px;
 }
 
 .search-results article {
-    border-top: 1px solid #E1E4E5;
-    padding-top: 24px;
+	border-top: 1px solid #E1E4E5;
+	padding-top: 24px;
 }
 
 .search-results article:first-child {
-    border-top: none;
+	border-top: none;
 }
 
 form .search-query {
-    width: 100%;
-    border-radius: 50px;
-    padding: 6px 12px;
-    /* csslint allow: box-model */
-    border-color: #D1D4D5;
+	width: 100%;
+	border-radius: 50px;
+	padding: 6px 12px;
+	/* csslint allow: box-model */
+	border-color: #D1D4D5;
 }
 
 /*
@@ -103,11 +133,11 @@ form .search-query {
  * https://github.com/mkdocs/mkdocs/issues/656
  */
 .rst-content .admonition code {
-    color: #404040;
-    border: 1px solid #c7c9cb;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    background: #f8fbfd;
-    background: rgba(255, 255, 255, 0.7);
+	color: #404040;
+	border: 1px solid #c7c9cb;
+	border: 1px solid rgba(0, 0, 0, 0.2);
+	background: #f8fbfd;
+	background: rgba(255, 255, 255, 0.7);
 }
 
 /*
@@ -118,19 +148,19 @@ form .search-query {
  * https://github.com/mkdocs/mkdocs/pull/1034
  */
 .rst-content .section .docutils {
-    width: 100%;
-    overflow: auto;
-    display: block;
-    border: none;
+	width: 100%;
+	overflow: auto;
+	display: block;
+	border: none;
 }
 
 td,
 th {
-    border: 1px solid #e1e4e5 !important;
-    /* csslint allow: important */
-    border-collapse: collapse;
+	border: 1px solid #e1e4e5 !important;
+	/* csslint allow: important */
+	border-collapse: collapse;
 }
 
 p {
-    text-align: justify;
+	text-align: justify;
 }
